--- a/src/index.css
+++ b/src/index.css
@@ -262,9 +262,9 @@ height: 7vh;
 }  
 
 .withdraw{
-  position: relative;
-  top: 14vh;
-  left: 615px;
+  position: fixed;
+  top: 8vh;
+  left: 810px;
 }
 .p3{
   position: relative;
